fixed gap

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ button:hover {
   max-width: 900px;
   margin: auto;
   text-align: center;
-  gap: 50px;
+  gap: 80px;
 }
 .offer .grid p {
   margin: auto;
